--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>The Terminal - Your Source for Fact-Based News</title>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -45,6 +46,6 @@
     <a href="#">FAVORITE</a>
     <a href="#">READ</a>
   </div>
-
+  <p id="creator>created by Senay Yakut</p>
 </body>
 </html>
