--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 
     <p>UC Davis remains a primary steward of the lake. The UC Davis Tahoe Environmental Research Center is dedicated to research, education and public outreach, and to providing objective scientific information for restoration and sustainable use of the Lake Tahoe Basin. Each year, it produces a well-publicized "State of the Lake" assessment report.</p>
   </div>
-  <p id="creator>created by Senay Yakut</p>
   <div class="share">
     <a href="#">SHARE</a>
     <a href="#">FAVORITE</a>
     <a href="#">READ</a>
   </div>
+  <div><p id="creator>created by Senay Yakut</p>
+</div>
 </body>
 </html>
