--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a href="#">FAVORITE</a>
     <a href="#">READ</a>
   </div>
-  <div><p id="creator>created by Senay Yakut</p>
+  <p id="creator>created by Senay Yakut</p>
 </div>
 </body>
 </html>
